# tether

./: .gitignore  CHANGELOG.md  PLAN.md  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  publish.yml
benchmarks/: RESULTS.md  bench_tether.py
src/tether/: __init__.py  _async.py  _compat.py  _expect.py  _interact.py  _popen.py  _pty.py  _run.py  _spawn.py  _ssh.py  _types.py  compat.py
tests/: test_compat.py  test_errors.py  test_expect.py  test_pty.py  test_screen.py  test_spawn.py  test_spawn_advanced.py  test_ssh.py
