[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tether"
version = "0.1.0"
description = "Modern process interaction library — expect-style automation with PTY support"
readme = "README.md"
license = "ISC"
requires-python = ">=3.10"
authors = [{ name = "Agentine" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
keywords = ["pexpect", "expect", "pty", "terminal", "automation", "process"]

[project.urls]
Homepage = "https://github.com/agentine/tether"
Repository = "https://github.com/agentine/tether"
Issues = "https://github.com/agentine/tether/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/tether"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "mypy>=1.8", "pyright>=1.1", "ruff>=0.3"]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
