[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tether"
version = "0.1.0"
description = "Modern process interaction library — expect-style automation with PTY support"
readme = "README.md"
license = "ISC"
requires-python = ">=3.10"
authors = [{ name = "Agentine" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
keywords = ["pexpect", "expect", "pty", "terminal", "automation", "process"]

[project.urls]
Homepage = "https://github.com/agentine/tether"
Repository = "https://github.com/agentine/tether"
Issues = "https://github.com/agentine/tether/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/tether"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "mypy>=1.8", "pyright>=1.1", "ruff>=0.3", "pexpect>=4.9.0"]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]
ignore = [
    "N811",   # EOF/Timeout imported as EOFError/TimeoutError (pexpect compat)
    "N813",   # camelcase imported as lowercase (pexpect compat aliases)
    "N814",   # camelcase imported as constant
    "A004",   # builtin shadowing (EOFError alias is intentional)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["SIM105", "SIM108", "SIM117", "B904"]  # test clarity over style
"src/tether/_errors.py" = ["N818"]  # EOF/Timeout are not suffixed with Error (pexpect compat)
"src/tether/__init__.py" = ["N801"]  # re-exports with pexpect-compat names
"src/tether/_types.py" = ["N801", "E501"]  # EOF_TYPE/TIMEOUT_TYPE naming is intentional
"src/tether/_pty.py" = ["SIM105"]  # try/except/pass for OS cleanup is clearer
"src/tether/_popen.py" = ["SIM105", "SIM108"]  # try/except/pass for cleanup, if/else for clarity
"src/tether/_spawn.py" = ["SIM108"]  # if/else for clarity
"src/tether/_async.py" = ["SIM108"]  # if/else for clarity
"src/tether/_ssh.py" = ["SIM105"]  # try/except/pass for cleanup

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "mypy>=1.8",
    "pyright>=1.1",
    "ruff>=0.3",
    "pexpect>=4.9.0",
]
